# Opt_ImageScanner

./: .gitignore  CMakeLists.txt  README.md
app/: main_template.cpp
data/letters/: AB11.txt  AB12.txt  AB13.txt  AB14.txt  AB15.txt  AB17.txt  AB18.txt  AB19.txt  AB20.txt  AB21.txt  AB22.txt  AB23.txt  AB24.txt  AB25.txt  AB26.txt  AB27.txt  AB28.txt  AB8.txt  AB9.txt  AP10.txt  AP11.txt  AP12.txt  AP14.txt  AP15.txt  AP16.txt  AP17.txt  AP18.txt  AP19.txt  AP20.txt  AP21.txt  AP22.txt  AP24.txt  AP25.txt  AP26.txt  AP27.txt  AP8.txt  BB10.txt  BB11.txt  BB12.txt  BB13.txt  (+888 more)
include/: image_scanner.hpp  util.hpp
others/: nika.cpp  romka.cpp
scripts/: ImageScannerVis.java  rank.py  run.py  score.py
submit/: v_1.cpp
